test/parse/assert/bad-assert-return-canonical-nan-unknown-function.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module)
(assert_return_canonical_nan (invoke "foo"))
(;; STDERR ;;;
out/test/parse/assert/bad-assert-return-canonical-nan-unknown-function.txt:4:31: error: unknown function export "foo"
(assert_return_canonical_nan (invoke "foo"))
                              ^^^^^^
;;; STDERR ;;)
